futures/testcrate/ui/nested.stderr
error[E0308]: mismatched types
  --> $DIR/nested.rs:10:19
   |
10 |             yield i * i;
   |                   ^^^^^ expected (), found integer
   |
   = note: expected type `()`
              found type `{integer}`

error[E0698]: type inside generator must be known in this context
 --> $DIR/nested.rs:5:1
  |
5 | #[async_stream]
  | ^^^^^^^^^^^^^^^
  |
note: the type is part of the generator because of this `yield`
 --> $DIR/nested.rs:10:13
  |
10|             yield i * i;
  |             ^^^^^^^^^^^

error[E0698]: type inside generator must be known in this context
 --> $DIR/nested.rs:5:1
  |
5 | #[async_stream]
  | ^^^^^^^^^^^^^^^
  |
note: the type is part of the generator because of this `yield`
 --> $DIR/nested.rs:5:1
  |
5 | #[async_stream]
  | ^^^^^^^^^^^^^^^

error[E0698]: type inside generator must be known in this context
 --> $DIR/nested.rs:9:13
  |
9 |         for i in stream::iter(vec![1, 2]) {
  |             ^
  |
note: the type is part of the generator because of this `yield`
 --> $DIR/nested.rs:10:13
  |
10|             yield i * i;
  |             ^^^^^^^^^^^

error[E0698]: type inside generator must be known in this context
  --> $DIR/nested.rs:10:19
   |
10 |             yield i * i;
   |                   ^
   |
note: the type is part of the generator because of this `yield`
  --> $DIR/nested.rs:10:13
   |
10 |             yield i * i;
   |             ^^^^^^^^^^^

error[E0698]: type inside generator must be known in this context
  --> $DIR/nested.rs:10:23
   |
10 |             yield i * i;
   |                       ^
   |
note: the type is part of the generator because of this `yield`
  --> $DIR/nested.rs:10:13
   |
10 |             yield i * i;
   |             ^^^^^^^^^^^

error[E0698]: type inside generator must be known in this context
  --> $DIR/nested.rs:10:19
   |
10 |             yield i * i;
   |                   ^^^^^
   |
note: the type is part of the generator because of this `yield`
  --> $DIR/nested.rs:10:13
   |
10 |             yield i * i;
   |             ^^^^^^^^^^^

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0308`.
